turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:10: error: not found: value rules
  if (rules(a)=='R') {
      ^